fix: Fix the style of avtive label-align config

--- a/clients/components/form-builder/index.scss
+++ b/clients/components/form-builder/index.scss
@@ -114,7 +114,7 @@
   display: none;
   position: absolute;
   top: 2px;
-  right: 4px;
+  right: 2px;
 }
 
 .item-label {
